--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="images.jpeg" alt="">
                     <div class="intro-text">
                         <span class="name">Debei Ann M. Banga-an</span>
                         <hr class="star-light">
@@ -243,8 +243,8 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p>Block 7 #36 Middle Quirino Hill
+                            <br>Baguio City, Philippines 2600</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
